--- a/.github/workflows/depolyTencent.yml
+++ b/.github/workflows/depolyTencent.yml
@@ -4,7 +4,7 @@ name: deploy to tengxunyun
 on: # 此CI/CD触发时的事件
   push: # 在代码提交时自动触发
     branches:
-      - master
+      - main
 
 # 一个 CI/CD 的工作流有许多 jobs 组成，比如最典型的 job 是 lint，test，build。
 jobs: 
@@ -14,7 +14,7 @@ jobs:
       # 切换分支获取源码
       - name: Checkout # step的名称，将会在 github action 的控制台中显示
         # 选择一个action，可以理解为若干 steps.run，有利于代码复用
-        uses: actions/checkout@master
+        uses: actions/checkout@v1
       # 安装使用 node:10
       - name: use Node.js 10
         uses: actions/setup-node@v1
@@ -32,7 +32,7 @@ jobs:
         uses: easingthemes/ssh-deploy@v2.0.7
         env:
             # 本地.ssh文件下的私钥id_rsa，存在secrets的TOKEN中
-            SSH_PRIVATE_KEY: ${{ secrets.TOKEN }} 
+            SSH_PRIVATE_KEY: ${{ secrets.RES_TOKEN }} 
             # 复制操作的参数。"-avzr --delete"意味部署时清空服务器目标目录下的文件
             ARGS: "-avzr --delete" 
             # 源目录，相对于$GITHUB_WORKSPACE根目录的路径
