--- a/.github/workflows/depolyTencent.yml
+++ b/.github/workflows/depolyTencent.yml
@@ -24,7 +24,7 @@ jobs:
       - name: npm install and build
         run: |
           npm install
-          npm run deploy
+          npm run 
         env:
           CI: true
       # 部署到腾讯云服务器
