--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
     "build": "vuepress build docs",
     "deploy": "bash deploy.sh",
     "editFm": "node utils/editFrontmatter.js",
-    "baiduPush": "node utils/baiduPush.js http://techfly.top && bash baiduPush.sh",
+    "baiduPush": "node utils/baiduPush.js http://www.techfly.top && bash baiduPush.sh",
+    "baiduPush2": "node utils/baiduPush.js http://www.techfly.top && bash baiduPush.sh",
     "publish": "cd theme-vdoing && npm publish && cd ../ && npm update vuepress-theme-vdoing"
   },
   "license": "MIT",
